src/test/ui/regions/region-multiple-lifetime-bounds-on-fns-where-clause.nll.stderr
error: lifetime may not live long enough
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:9:5
   |
LL | fn b<'a, 'b, 'c>(x: &mut &'a isize, y: &mut &'b isize, z: &mut &'c isize) {
   |      --  -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
LL |     // Illegal now because there is no `'b:'a` declaration.
LL |     *x = *y;
   |     ^^^^^^^ assignment requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`

error: lifetime may not live long enough
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:16:5
   |
LL | fn c<'a,'b, 'c>(x: &mut &'a isize, y: &mut &'b isize, z: &mut &'c isize) {
   |      -- -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
...
LL |     a(x, y, z);
   |     ^^^^^^^^^^ argument requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`

error: higher-ranked subtype error
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:22:12
   |
LL |     let _: fn(&mut &isize, &mut &isize, &mut &isize) = a;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:22:12
   |
LL |     let _: fn(&mut &isize, &mut &isize, &mut &isize) = a;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/region-multiple-lifetime-bounds-on-fns-where-clause.rs:22:12
   |
LL |     let _: fn(&mut &isize, &mut &isize, &mut &isize) = a;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

